# fast-food

./: Cargo.toml  README.md  config.yaml
src/: main.rs
