[package]
name = "fast-food"
version = "0.1.0"
edition = "2021"
authors = ["Kazuma Murata <kazzix14@gmail.com>"]
license = "MIT"
description = "A CLI tool to simplify command usage through shortcuts"
repository = "https://github.com/kazzix14/fast-food"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["string"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
